added find duplicates function

--- a/Basics.ipynb
+++ b/Basics.ipynb
@@ -6,7 +6,11 @@
    "source": [
     "# What apps are most liked by users\n",
     "\n",
-    "- This goal of this project is to analyze what type of apps attract more users."
+    "- This goal of this project is to analyze what type of apps attract more users.\n",
+    "\n",
+    "We will use two datasets.\n",
+    "1.[Google play app data](https://www.kaggle.com/lava18/google-play-store-apps) \n",
+    "2.[Apple Mobile App Data](https://www.kaggle.com/ramamet4/app-store-apple-data-set-10k-apps)"
    ]
   },
   {
@@ -43,6 +47,72 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Coloring book moana', 'ART_AND_DESIGN', '3.9', '967', '14M', '500,000+', 'Free', '0', 'Everyone', 'Art & Design;Pretend Play', 'January 15, 2018', '2.0.0', '4.0.3 and up']\n",
+      "\n",
+      "\n",
+      "Number of rows: 10841\n",
+      "Number of columns: 13\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "#explore_data(ios_file[1:],1,2,True)\n",
+    "explore_data(google_file[1:],1,2,True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['App', 'Category', 'Rating', 'Reviews', 'Size', 'Installs', 'Type', 'Price', 'Content Rating', 'Genres', 'Last Updated', 'Current Ver', 'Android Ver'], ['Photo Editor & Candy Camera & Grid & ScrapBook', 'ART_AND_DESIGN', '4.1', '159', '19M', '10,000+', 'Free', '0', 'Everyone', 'Art & Design', 'January 7, 2018', '1.0.0', '4.0.3 and up']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(google_file[0:2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Life Made WI-Fi Touchscreen Photo Frame', '1.9', '19', '3.0M', '1,000+', 'Free', '0', 'Everyone', '', 'February 11, 2018', '1.0.19', '4.0 and up']\n",
+      "12\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(google_file[10473])\n",
+    "print(len(google_file[10473]))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {
     "collapsed": false
@@ -52,19 +122,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['389801252', 'Instagram', '113954816', 'USD', '0.0', '2161558', '1289', '4.5', '4.0', '10.23', '12+', 'Photo & Video', '37', '0', '29', '1']\n",
-      "\n",
-      "\n",
-      "Number of rows: 7197\n",
-      "Number of columns: 16\n",
-      "\n",
-      "\n"
+      "['osmino Wi-Fi: free WiFi', 'TOOLS', '4.2', '134203', '4.1M', '10,000,000+', 'Free', '0', 'Everyone', 'Tools', 'August 7, 2018', '6.06.14', '4.4 and up']\n",
+      "13\n"
      ]
     }
    ],
    "source": [
-    "explore_data(ios_file[1:],1,2,True)\n",
-    "#explore_data(google_file[1:],0,3)"
+    "del google_file[10473]\n",
+    "print(google_file[10473])\n",
+    "print(len(google_file[10473]))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From the [disscussion](https://www.kaggle.com/lava18/google-play-store-apps/discussion) we can see that there may be duplicate datas. \n",
+    "So I am going to make a function which finds out duplicate data entries. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1.First I am going to find what kind of data has duplicate entries\n",
+    "- i will try to find apps with dupliactes entries"
    ]
   },
   {
@@ -78,13 +160,81 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[['id', 'track_name', 'size_bytes', 'currency', 'price', 'rating_count_tot', 'rating_count_ver', 'user_rating', 'user_rating_ver', 'ver', 'cont_rating', 'prime_genre', 'sup_devices.num', 'ipadSc_urls.num', 'lang.num', 'vpp_lic'], ['284882215', 'Facebook', '389879808', 'USD', '0.0', '2974676', '212', '3.5', '3.5', '95.0', '4+', 'Social Networking', '37', '1', '29', '1']]\n"
+      "['App', 'Category', 'Rating', 'Reviews', 'Size', 'Installs', 'Type', 'Price', 'Content Rating', 'Genres', 'Last Updated', 'Current Ver', 'Android Ver']\n"
      ]
     }
    ],
    "source": [
-    "print(ios_file[0:2])"
+    "print(google_file[0])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def find_duplicates(dataset,header=True):\n",
+    "    if header:\n",
+    "        apps_data= dataset[1:]\n",
+    "    else:\n",
+    "        apps_data= dataset\n",
+    "    duplicate = []\n",
+    "    unique_app = []\n",
+    "    for row in apps_data:\n",
+    "        if row[0] in unique_app:\n",
+    "            duplicate.append(row[0])\n",
+    "        else:\n",
+    "            unique_app.append(row[0])\n",
+    "    \n",
+    "    print('Number of duplicate app: ',len(duplicate))\n",
+    "    print('Example of duplicate app:', duplicate[:15])\n",
+    "    return duplicate\n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here we will first get all the duplicates app by the `find_duplicates` function\n",
+    "the function return alist the name of the app that has duplicate entries.\n",
+    "\n",
+    "-> `find dupliactes` has two parameters. dataset and header \n",
+    "-> if your dataset doesnt have header row, pass `header=False` as parameter. \n",
+    "->The default value is `True` as we assume that the dataset has header while being passed as arguement "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of duplicate app:  1181\n",
+      "Example of duplicate app: ['Quick PDF Scanner + OCR FREE', 'Box', 'Google My Business', 'ZOOM Cloud Meetings', 'join.me - Simple Meetings', 'Box', 'Zenefits', 'Google Ads', 'Google My Business', 'Slack', 'FreshBooks Classic', 'Insightly CRM', 'QuickBooks Accounting: Invoicing & Expenses', 'HipChat - Chat Built for Teams', 'Xero Accounting Software']\n"
+     ]
+    }
+   ],
+   "source": [
+    "GooglePlay_duplicates = find_duplicates(google_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
