--- a/Basics.ipynb
+++ b/Basics.ipynb
@@ -33,7 +33,7 @@
     "        print('Number of rows:',len(dataset))\n",
     "        print('Number of columns:', len(dataset[0]))\n",
     "        print('\\n')\n",
-    "\n",
+    "    \n",
     "        \n",
     "def open_data(file_name):\n",
     "    file = open(file_name,encoding='utf8')\n",
@@ -137,6 +137,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# found duplicate data from disscussion \n",
     "From the [disscussion](https://www.kaggle.com/lava18/google-play-store-apps/discussion) we can see that there may be duplicate datas. \n",
     "So I am going to make a function which finds out duplicate data entries. "
    ]
@@ -176,14 +177,10 @@
    },
    "outputs": [],
    "source": [
-    "def find_duplicates(dataset,header=True):\n",
-    "    if header:\n",
-    "        apps_data= dataset[1:]\n",
-    "    else:\n",
-    "        apps_data= dataset\n",
+    "def find_duplicates(dataset):\n",
     "    duplicate = []\n",
     "    unique_app = []\n",
-    "    for row in apps_data:\n",
+    "    for row in dataset[1:]:\n",
     "        if row[0] in unique_app:\n",
     "            duplicate.append(row[0])\n",
     "        else:\n",
@@ -191,7 +188,7 @@
     "    \n",
     "    print('Number of duplicate app: ',len(duplicate))\n",
     "    print('Example of duplicate app:', duplicate[:15])\n",
-    "    return duplicate\n",
+    "    return unique_app,duplicate\n",
     "            "
    ]
   },
@@ -209,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -224,17 +221,116 @@
     }
    ],
    "source": [
-    "GooglePlay_duplicates = find_duplicates(google_file)"
+    "android_unique_apps , android_duplicate = find_duplicates(google_file)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-> the `find dupliactes` return two values. `unique apps` and apps that have `duplicate values` in the dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "# Cleaning out duplicates\n",
+    "\n",
+    "`step 1`\n",
+    "- listing the unique apps with their maximum ratings\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
+   "source": [
+    "- we can see here that the rating are in 3rd colomn\n",
+    "- ['App', 'Category', 'Rating', 'Reviews', 'Size', 'Installs', 'Type', 'Price', 'Content Rating', 'Genres', 'Last Updated', 'Current Ver', 'Android Ver']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- We have a list `android_unique_apps` containg the name of unique app . we will use this same technique to extract out the unique apps' maximum rating.\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "unique_app_max_rating={}\n",
+    "for row in google_file[1:]:\n",
+    "    name = row[0]\n",
+    "    rating = float(row[3])\n",
+    "    if name in unique_app_max_rating:\n",
+    "        unique_app_max_rating[name]=max(unique_app_max_rating[name],rating)\n",
+    "    else:\n",
+    "        unique_app_max_rating[name]=rating\n",
+    "                                                                        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We have seen there is 1181 duplicate entries in the dataset. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9659\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(google_file[1:])-1181)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can see that after deleting the duplicate entries , we have exact `9659` values. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9659\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(unique_app_max_rating))"
+   ]
   }
  ],
  "metadata": {
