--- a/Basics.ipynb
+++ b/Basics.ipynb
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -239,7 +239,6 @@
    "source": [
     "# Cleaning out duplicates\n",
     "\n",
-    "`step 1`\n",
     "- listing the unique apps with their maximum ratings\n"
    ]
   },
@@ -263,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -289,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -298,12 +297,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9659\n"
+      "10840\n"
      ]
     }
    ],
    "source": [
-    "print(len(google_file[1:])-1181)"
+    "print(len(google_file[1:]))"
    ]
   },
   {
@@ -315,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -324,12 +323,70 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "66577446.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(unique_app_max_rating['Instagram'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- `we'd like to analyze only the apps that are directed toward an English-speaking audience. However, if we explore the data long enough, we'll find that both data sets have apps with names that suggest they are not directed toward an English-speaking audience.`\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- At first we counted the unique apps with their max ratings.\n",
+    "\n",
+    "- Then we looped throug the data and check if the row contains the maximum rating \n",
+    "\n",
+    "- we will also keep count of the already visited apps so that duplicate entries with max ratings also get eliminated"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sesh\n",
       "9659\n"
      ]
     }
    ],
    "source": [
-    "print(len(unique_app_max_rating))"
+    "android_header = google_file[0]\n",
+    "android_clean = []\n",
+    "already_added = []\n",
+    "for row in google_file[1:]:\n",
+    "    name=row[0]\n",
+    "    rating=float(row[3])\n",
+    "    max_rating=unique_app_max_rating[name]\n",
+    "    if (rating==max_rating) and (name not in already_added):\n",
+    "        #(row)\n",
+    "        android_clean.append(row)\n",
+    "        already_added.append(name)\n",
+    "        \n",
+    "#print('sesh')\n",
+    "print(len(android_clean))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`android_clean` is the clean data without duplicates."
    ]
   }
  ],
