removed non English apps from androids

--- a/Basics.ipynb
+++ b/Basics.ipynb
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -360,7 +360,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sesh\n",
       "9659\n"
      ]
     }
@@ -387,6 +386,135 @@
    "metadata": {},
    "source": [
     "`android_clean` is the clean data without duplicates."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Remiving NON English App\n",
+    "\n",
+    "We're not interested in keeping these apps, so we'll remove them. One way to go about this is to remove each app with a name containing a symbol that is not commonly used in English text — English text usually includes letters from the English alphabet, numbers composed of digits from 0 to 9, punctuation marks (., !, ?, ;), and other symbols (+, *, /).\n",
+    "\n",
+    "Behind the scenes, each character we use in a string has a corresponding number associated with it. For instance, the corresponding number for character 'a' is 97, character 'A' is 65, and character '爱' is 29,233. We can get the corresponding number of each character using the ord() built-in function."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "97\n",
+      "122\n",
+      "65\n",
+      "90\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(ord('a'))\n",
+    "print(ord('z'))\n",
+    "print(ord('A'))\n",
+    "print(ord('Z'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- part 1\n",
+    "  - we will keep names with ascii values\n",
+    "     - we have 128 ascii characters indexed from 0 to 127"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def is_english(name):\n",
+    "    for letter in name:\n",
+    "        nvalue = ord(letter)\n",
+    "        if nvalue> 127:\n",
+    "            return False\n",
+    "    return True           "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This function works just fine. But its wont work with all the english names bacause some english apps may use special characters such as\n",
+    "- `Docs To Go™ Free Office Suite` returns it as a non english name."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(is_english('Docs To Go™ Free Office Suite'))\n",
+    "print(is_english('Instachat 😜'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- part 2\n",
+    "    - If we're going to use the function we've created, we'll lose useful data since many English apps will be incorrectly labeled as non-English. To minimize the impact of data loss, we'll only remove an app if its name has more than three characters with corresponding numbers falling outside the ASCII range. This means all English apps with up to three emoji or other special characters will still be labeled as English. Our filter function is still not perfect, but it should be fairly effective."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "def is_english(name):\n",
+    "    cnt = 0\n",
+    "    for letter in name:\n",
+    "        nvalue = ord(letter)\n",
+    "        if nvalue> 127:\n",
+    "            cnt +=1\n",
+    "    if cnt>3:\n",
+    "        return False\n",
+    "    return True   \n",
+    "\n",
+    "print(is_english('Docs To Go™ Free Office Suite'))\n",
+    "print(is_english('Instachat 😜'))"
    ]
   }
  ],
