--- a/Basics.ipynb
+++ b/Basics.ipynb
@@ -516,6 +516,123 @@
     "print(is_english('Docs To Go™ Free Office Suite'))\n",
     "print(is_english('Instachat 😜'))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# removing non english app from android"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['App', 'Category', 'Rating', 'Reviews', 'Size', 'Installs', 'Type', 'Price', 'Content Rating', 'Genres', 'Last Updated', 'Current Ver', 'Android Ver']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(android_header)\n",
+    "\n",
+    "android_english=[]\n",
+    "for row in android_clean:\n",
+    "    name=row[0]\n",
+    "    if is_english(name)==True:\n",
+    "        android_english.append(row)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['U Launcher Lite – FREE Live Cool Themes, Hide Apps', 'ART_AND_DESIGN', '4.7', '87510', '8.7M', '5,000,000+', 'Free', '0', 'Everyone', 'Art & Design', 'August 1, 2018', '1.2.4', '4.0.3 and up']\n",
+      "\n",
+      "\n",
+      "['Sketch - Draw & Paint', 'ART_AND_DESIGN', '4.5', '215644', '25M', '50,000,000+', 'Free', '0', 'Teen', 'Art & Design', 'June 8, 2018', 'Varies with device', '4.2 and up']\n",
+      "\n",
+      "\n",
+      "Number of rows: 9614\n",
+      "Number of columns: 13\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "explore_data(android_english,1,3,True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# removing non english apps from ios "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7198\n",
+      "['id', 'track_name', 'size_bytes', 'currency', 'price', 'rating_count_tot', 'rating_count_ver', 'user_rating', 'user_rating_ver', 'ver', 'cont_rating', 'prime_genre', 'sup_devices.num', 'ipadSc_urls.num', 'lang.num', 'vpp_lic']\n",
+      "['389801252', 'Instagram', '113954816', 'USD', '0.0', '2161558', '1289', '4.5', '4.0', '10.23', '12+', 'Photo & Video', '37', '0', '29', '1']\n",
+      "\n",
+      "\n",
+      "['529479190', 'Clash of Clans', '116476928', 'USD', '0.0', '2130805', '579', '4.5', '4.5', '9.24.12', '9+', 'Games', '38', '5', '18', '1']\n",
+      "\n",
+      "\n",
+      "Number of rows: 6183\n",
+      "Number of columns: 16\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(ios_file))\n",
+    "ios_header = ios_file[0]\n",
+    "ios_data = ios_file[1:]\n",
+    "print(ios_header)\n",
+    "\n",
+    "ios_english=[]\n",
+    "for row in ios_data:\n",
+    "    name=row[1]\n",
+    "    if is_english(name)==True:\n",
+    "        ios_english.append(row)\n",
+    "        \n",
+    "explore_data(ios_english,1,3,True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
