frequencies of apps methods created

--- a/Basics.ipynb
+++ b/Basics.ipynb
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -623,6 +623,550 @@
     "        ios_english.append(row)\n",
     "        \n",
     "explore_data(ios_english,1,3,True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can see that we're left with `9614 Android apps` and `6183 iOS apps`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['App', 'Category', 'Rating', 'Reviews', 'Size', 'Installs', 'Type', 'Price', 'Content Rating', 'Genres', 'Last Updated', 'Current Ver', 'Android Ver']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(android_header)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Photo Editor & Candy Camera & Grid & ScrapBook', 'ART_AND_DESIGN', '4.1', '159', '19M', '10,000+', 'Free', '0', 'Everyone', 'Art & Design', 'January 7, 2018', '1.0.0', '4.0.3 and up']\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(android_english[0])\n",
+    "print(android_english[0][7])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Removing non free app\n",
+    "- part 1\n",
+    "    - android data has price feature in 8th colun (7th index) \n",
+    "    - we will remove any app which has price > 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['U Launcher Lite – FREE Live Cool Themes, Hide Apps', 'ART_AND_DESIGN', '4.7', '87510', '8.7M', '5,000,000+', 'Free', '0', 'Everyone', 'Art & Design', 'August 1, 2018', '1.2.4', '4.0.3 and up']\n",
+      "\n",
+      "\n",
+      "['Sketch - Draw & Paint', 'ART_AND_DESIGN', '4.5', '215644', '25M', '50,000,000+', 'Free', '0', 'Teen', 'Art & Design', 'June 8, 2018', 'Varies with device', '4.2 and up']\n",
+      "\n",
+      "\n",
+      "Number of rows: 8864\n",
+      "Number of columns: 13\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "free_android = []\n",
+    "for row in android_english:\n",
+    "    price = row[7]\n",
+    "    if price=='0':\n",
+    "        free_android.append(row)\n",
+    "\n",
+    "explore_data(free_android,1,3,True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['389801252', 'Instagram', '113954816', 'USD', '0.0', '2161558', '1289', '4.5', '4.0', '10.23', '12+', 'Photo & Video', '37', '0', '29', '1']\n",
+      "\n",
+      "\n",
+      "['529479190', 'Clash of Clans', '116476928', 'USD', '0.0', '2130805', '579', '4.5', '4.5', '9.24.12', '9+', 'Games', '38', '5', '18', '1']\n",
+      "\n",
+      "\n",
+      "Number of rows: 3222\n",
+      "Number of columns: 16\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "free_ios = []\n",
+    "for row in ios_english:\n",
+    "    price=row[4]\n",
+    "    if price=='0.0':\n",
+    "        free_ios.append(row)\n",
+    "        \n",
+    "explore_data(free_ios,1,3,True)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We're left with `8864 Android apps` and `3222 iOS apps`, which should be enough for our analysis."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To minimize risks and overhead, our validation strategy for an app idea is comprised of three steps:\n",
+    "\n",
+    "    - Build a minimal Android version of the app, and add it to Google Play.\n",
+    "    - If the app has a good response from users, we develop it further.\n",
+    "    - If the app is profitable after six months, we build an iOS version of the app and add it to the App Store.\n",
+    "\n",
+    "Because our end goal is to add the app on both Google Play and the App Store, we need to find app profiles that are successful on both markets. For instance, a profile that works well for both markets might be a productivity app that makes use of gamification."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "part 1\n",
+    "    - finding genre freequencies on android"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tools\n",
+      "749\n"
+     ]
+    }
+   ],
+   "source": [
+    "android_genre = {}\n",
+    "\n",
+    "for row in free_android:\n",
+    "    genre = row[9]\n",
+    "    if genre in android_genre:\n",
+    "        android_genre[genre]+=1\n",
+    "    else:\n",
+    "        android_genre[genre]=1\n",
+    "\n",
+    "fav_android_genre=''\n",
+    "max_android_freq=0\n",
+    "\n",
+    "for key,freq in android_genre.items():\n",
+    "    if max_android_freq<freq:\n",
+    "        max_android_freq=freq\n",
+    "        fav_android_genre=key\n",
+    "        \n",
+    "print(fav_android_genre)\n",
+    "print(max_android_freq)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Games\n",
+      "1874\n"
+     ]
+    }
+   ],
+   "source": [
+    "ios_genre = {}\n",
+    "\n",
+    "for row in free_ios:\n",
+    "    genre = row[11]\n",
+    "    if genre in ios_genre:\n",
+    "        ios_genre[genre]+=1\n",
+    "    else:\n",
+    "        ios_genre[genre]=1\n",
+    "\n",
+    "fav_ios_genre=''\n",
+    "max_ios_freq=0\n",
+    "\n",
+    "for key,freq in ios_genre.items():\n",
+    "    if max_ios_freq<freq:\n",
+    "        max_ios_freq=freq\n",
+    "        fav_ios_genre = key\n",
+    "        \n",
+    "print(fav_ios_genre)\n",
+    "print(max_ios_freq)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['App', 'Category', 'Rating', 'Reviews', 'Size', 'Installs', 'Type', 'Price', 'Content Rating', 'Genres', 'Last Updated', 'Current Ver', 'Android Ver'] \n",
+      " ['id', 'track_name', 'size_bytes', 'currency', 'price', 'rating_count_tot', 'rating_count_ver', 'user_rating', 'user_rating_ver', 'ver', 'cont_rating', 'prime_genre', 'sup_devices.num', 'ipadSc_urls.num', 'lang.num', 'vpp_lic']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(android_header,'\\n',ios_header)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "we'll need to build a frequency table for the prime_genre column of the App Store data set, and for the Genres and Category columns of the Google Play data set.\n",
+    "\n",
+    "We'll build two functions we can use to analyze the frequency tables:\n",
+    "\n",
+    "   - One function to generate frequency tables that show percentages\n",
+    "   - Another function we can use to display the percentages in a descending order\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def freq_table(dataset,index):\n",
+    "    freq_dic = {}\n",
+    "    for row in dataset:\n",
+    "        feature = row[index]\n",
+    "        if feature in freq_dic:\n",
+    "            freq_dic[feature]+=1\n",
+    "        else:\n",
+    "            freq_dic[feature]=1\n",
+    "    total = len(dataset)\n",
+    "    freq_percentage =  {}\n",
+    "    for key in freq_dic:\n",
+    "        percentage = (freq_dic[key]/total)*100\n",
+    "        freq_percentage[key] = percentage \n",
+    "    \n",
+    "    return freq_percentage\n",
+    "\n",
+    "       \n",
+    "def display_table(dataset, index):\n",
+    "    table =  freq_table(dataset,index)\n",
+    "    table_display = []\n",
+    "    for key in table:\n",
+    "        key_val_as_tuple = (table[key],key)\n",
+    "        table_display.append(key_val_as_tuple)\n",
+    "    \n",
+    "    table_sorted = sorted(table_display, reverse=True)\n",
+    "    for entry in table_sorted:\n",
+    "        print(entry[1],':',entry[0])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "getting percentage table for ios apps, feature = prime_genre , index = 11 (0 based indexing)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Games : 58.16263190564867\n",
+      "Entertainment : 7.883302296710118\n",
+      "Photo & Video : 4.9658597144630665\n",
+      "Education : 3.662321539416512\n",
+      "Social Networking : 3.2898820608317814\n",
+      "Shopping : 2.60707635009311\n",
+      "Utilities : 2.5139664804469275\n",
+      "Sports : 2.1415270018621975\n",
+      "Music : 2.0484171322160147\n",
+      "Health & Fitness : 2.0173805090006205\n",
+      "Productivity : 1.7380509000620732\n",
+      "Lifestyle : 1.5828677839851024\n",
+      "News : 1.3345747982619491\n",
+      "Travel : 1.2414649286157666\n",
+      "Finance : 1.1173184357541899\n",
+      "Weather : 0.8690254500310366\n",
+      "Food & Drink : 0.8069522036002483\n",
+      "Reference : 0.5586592178770949\n",
+      "Business : 0.5276225946617008\n",
+      "Book : 0.4345127250155183\n",
+      "Navigation : 0.186219739292365\n",
+      "Medical : 0.186219739292365\n",
+      "Catalogs : 0.12414649286157665\n"
+     ]
+    }
+   ],
+   "source": [
+    "display_table(free_ios,11)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "getting percentage table for android apps, feature = genre , index = 9 (o based indexing)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tools : 8.449909747292418\n",
+      "Entertainment : 6.069494584837545\n",
+      "Education : 5.347472924187725\n",
+      "Business : 4.591606498194946\n",
+      "Productivity : 3.892148014440433\n",
+      "Lifestyle : 3.892148014440433\n",
+      "Finance : 3.7003610108303246\n",
+      "Medical : 3.531137184115524\n",
+      "Sports : 3.463447653429603\n",
+      "Personalization : 3.3167870036101084\n",
+      "Communication : 3.2378158844765346\n",
+      "Action : 3.1024368231046933\n",
+      "Health & Fitness : 3.0798736462093865\n",
+      "Photography : 2.944494584837545\n",
+      "News & Magazines : 2.7978339350180503\n",
+      "Social : 2.6624548736462095\n",
+      "Travel & Local : 2.3240072202166067\n",
+      "Shopping : 2.2450361010830324\n",
+      "Books & Reference : 2.1435018050541514\n",
+      "Simulation : 2.0419675090252705\n",
+      "Dating : 1.861462093862816\n",
+      "Arcade : 1.8501805054151623\n",
+      "Video Players & Editors : 1.7712093862815883\n",
+      "Casual : 1.7599277978339352\n",
+      "Maps & Navigation : 1.3989169675090252\n",
+      "Food & Drink : 1.2409747292418771\n",
+      "Puzzle : 1.128158844765343\n",
+      "Racing : 0.9927797833935018\n",
+      "Role Playing : 0.9363718411552346\n",
+      "Libraries & Demo : 0.9363718411552346\n",
+      "Auto & Vehicles : 0.9250902527075812\n",
+      "Strategy : 0.9138086642599278\n",
+      "House & Home : 0.8235559566787004\n",
+      "Weather : 0.8009927797833934\n",
+      "Events : 0.7107400722021661\n",
+      "Adventure : 0.6768953068592057\n",
+      "Comics : 0.6092057761732852\n",
+      "Beauty : 0.5979241877256317\n",
+      "Art & Design : 0.5979241877256317\n",
+      "Parenting : 0.4963898916967509\n",
+      "Card : 0.45126353790613716\n",
+      "Casino : 0.42870036101083037\n",
+      "Trivia : 0.41741877256317694\n",
+      "Educational;Education : 0.39485559566787\n",
+      "Board : 0.3835740072202166\n",
+      "Educational : 0.3722924187725632\n",
+      "Education;Education : 0.33844765342960287\n",
+      "Word : 0.2594765342960289\n",
+      "Casual;Pretend Play : 0.236913357400722\n",
+      "Music : 0.2030685920577617\n",
+      "Racing;Action & Adventure : 0.16922382671480143\n",
+      "Puzzle;Brain Games : 0.16922382671480143\n",
+      "Entertainment;Music & Video : 0.16922382671480143\n",
+      "Casual;Brain Games : 0.13537906137184114\n",
+      "Casual;Action & Adventure : 0.13537906137184114\n",
+      "Arcade;Action & Adventure : 0.12409747292418773\n",
+      "Action;Action & Adventure : 0.10153429602888085\n",
+      "Educational;Pretend Play : 0.09025270758122744\n",
+      "Simulation;Action & Adventure : 0.078971119133574\n",
+      "Parenting;Education : 0.078971119133574\n",
+      "Entertainment;Brain Games : 0.078971119133574\n",
+      "Board;Brain Games : 0.078971119133574\n",
+      "Parenting;Music & Video : 0.06768953068592057\n",
+      "Educational;Brain Games : 0.06768953068592057\n",
+      "Casual;Creativity : 0.06768953068592057\n",
+      "Art & Design;Creativity : 0.06768953068592057\n",
+      "Education;Pretend Play : 0.056407942238267145\n",
+      "Role Playing;Pretend Play : 0.04512635379061372\n",
+      "Education;Creativity : 0.04512635379061372\n",
+      "Role Playing;Action & Adventure : 0.033844765342960284\n",
+      "Puzzle;Action & Adventure : 0.033844765342960284\n",
+      "Entertainment;Creativity : 0.033844765342960284\n",
+      "Entertainment;Action & Adventure : 0.033844765342960284\n",
+      "Educational;Creativity : 0.033844765342960284\n",
+      "Educational;Action & Adventure : 0.033844765342960284\n",
+      "Education;Music & Video : 0.033844765342960284\n",
+      "Education;Brain Games : 0.033844765342960284\n",
+      "Education;Action & Adventure : 0.033844765342960284\n",
+      "Adventure;Action & Adventure : 0.033844765342960284\n",
+      "Video Players & Editors;Music & Video : 0.02256317689530686\n",
+      "Sports;Action & Adventure : 0.02256317689530686\n",
+      "Simulation;Pretend Play : 0.02256317689530686\n",
+      "Puzzle;Creativity : 0.02256317689530686\n",
+      "Music;Music & Video : 0.02256317689530686\n",
+      "Entertainment;Pretend Play : 0.02256317689530686\n",
+      "Casual;Education : 0.02256317689530686\n",
+      "Board;Action & Adventure : 0.02256317689530686\n",
+      "Video Players & Editors;Creativity : 0.01128158844765343\n",
+      "Trivia;Education : 0.01128158844765343\n",
+      "Travel & Local;Action & Adventure : 0.01128158844765343\n",
+      "Tools;Education : 0.01128158844765343\n",
+      "Strategy;Education : 0.01128158844765343\n",
+      "Strategy;Creativity : 0.01128158844765343\n",
+      "Strategy;Action & Adventure : 0.01128158844765343\n",
+      "Simulation;Education : 0.01128158844765343\n",
+      "Role Playing;Brain Games : 0.01128158844765343\n",
+      "Racing;Pretend Play : 0.01128158844765343\n",
+      "Puzzle;Education : 0.01128158844765343\n",
+      "Parenting;Brain Games : 0.01128158844765343\n",
+      "Music & Audio;Music & Video : 0.01128158844765343\n",
+      "Lifestyle;Pretend Play : 0.01128158844765343\n",
+      "Lifestyle;Education : 0.01128158844765343\n",
+      "Health & Fitness;Education : 0.01128158844765343\n",
+      "Health & Fitness;Action & Adventure : 0.01128158844765343\n",
+      "Entertainment;Education : 0.01128158844765343\n",
+      "Communication;Creativity : 0.01128158844765343\n",
+      "Comics;Creativity : 0.01128158844765343\n",
+      "Casual;Music & Video : 0.01128158844765343\n",
+      "Card;Action & Adventure : 0.01128158844765343\n",
+      "Books & Reference;Education : 0.01128158844765343\n",
+      "Art & Design;Pretend Play : 0.01128158844765343\n",
+      "Art & Design;Action & Adventure : 0.01128158844765343\n",
+      "Arcade;Pretend Play : 0.01128158844765343\n",
+      "Adventure;Education : 0.01128158844765343\n"
+     ]
+    }
+   ],
+   "source": [
+    "display_table(free_android,9)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "getting percentage table for android apps,feature = category  , index = 1 (0 based indexing)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "FAMILY : 18.907942238267147\n",
+      "GAME : 9.724729241877256\n",
+      "TOOLS : 8.461191335740072\n",
+      "BUSINESS : 4.591606498194946\n",
+      "LIFESTYLE : 3.9034296028880866\n",
+      "PRODUCTIVITY : 3.892148014440433\n",
+      "FINANCE : 3.7003610108303246\n",
+      "MEDICAL : 3.531137184115524\n",
+      "SPORTS : 3.395758122743682\n",
+      "PERSONALIZATION : 3.3167870036101084\n",
+      "COMMUNICATION : 3.2378158844765346\n",
+      "HEALTH_AND_FITNESS : 3.0798736462093865\n",
+      "PHOTOGRAPHY : 2.944494584837545\n",
+      "NEWS_AND_MAGAZINES : 2.7978339350180503\n",
+      "SOCIAL : 2.6624548736462095\n",
+      "TRAVEL_AND_LOCAL : 2.33528880866426\n",
+      "SHOPPING : 2.2450361010830324\n",
+      "BOOKS_AND_REFERENCE : 2.1435018050541514\n",
+      "DATING : 1.861462093862816\n",
+      "VIDEO_PLAYERS : 1.7937725631768955\n",
+      "MAPS_AND_NAVIGATION : 1.3989169675090252\n",
+      "FOOD_AND_DRINK : 1.2409747292418771\n",
+      "EDUCATION : 1.1620036101083033\n",
+      "ENTERTAINMENT : 0.9589350180505415\n",
+      "LIBRARIES_AND_DEMO : 0.9363718411552346\n",
+      "AUTO_AND_VEHICLES : 0.9250902527075812\n",
+      "HOUSE_AND_HOME : 0.8235559566787004\n",
+      "WEATHER : 0.8009927797833934\n",
+      "EVENTS : 0.7107400722021661\n",
+      "PARENTING : 0.6543321299638989\n",
+      "ART_AND_DESIGN : 0.6430505415162455\n",
+      "COMICS : 0.6204873646209386\n",
+      "BEAUTY : 0.5979241877256317\n"
+     ]
+    }
+   ],
+   "source": [
+    "display_table(free_android,1)"
    ]
   },
   {
