finding popular genres of ios data

--- a/Basics.ipynb
+++ b/Basics.ipynb
@@ -1170,13 +1170,102 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The frequency tables we analyzed on the previous screen showed us that the App Store is dominated by apps designed for fun, while Google Play shows a more balanced landscape of both practical and fun apps. Now, we'd like to get an idea about the kind of apps with the most users.\n",
+    "\n",
+    "One way to find out what genres are the most popular (have the most users) is to calculate the average number of installs for each app genre. For the Google Play data set, we can find this information in the Installs column, but this information is missing for the App Store data set. As a workaround, we'll take the total number of user ratings as a proxy, which we can find in the rating_count_tot app."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Productivity  :  21028.410714285714\n",
+      "Reference  :  74942.11111111111\n",
+      "Navigation  :  86090.33333333333\n",
+      "Lifestyle  :  16485.764705882353\n",
+      "Music  :  57326.530303030304\n",
+      "Business  :  7491.117647058823\n",
+      "Games  :  22788.6696905016\n",
+      "Travel  :  28243.8\n",
+      "Catalogs  :  4004.0\n",
+      "Medical  :  612.0\n",
+      "Entertainment  :  14029.830708661417\n",
+      "Education  :  7003.983050847458\n",
+      "Health & Fitness  :  23298.015384615384\n",
+      "Utilities  :  18684.456790123455\n",
+      "Shopping  :  26919.690476190477\n",
+      "News  :  21248.023255813954\n",
+      "Food & Drink  :  33333.92307692308\n",
+      "Sports  :  23008.898550724636\n",
+      "Weather  :  52279.892857142855\n",
+      "Book  :  39758.5\n",
+      "Finance  :  31467.944444444445\n",
+      "Social Networking  :  71548.34905660378\n",
+      "Photo & Video  :  28441.54375\n"
+     ]
+    }
+   ],
+   "source": [
+    "unique_ios_apps = freq_table(free_ios,-5)\n",
+    "\n",
+    "for genre in unique_ios_apps:\n",
+    "    total=0\n",
+    "    len_genre=0\n",
+    "    for app in free_ios:\n",
+    "        genre_app=app[-5]\n",
+    "        if genre_app==genre:\n",
+    "            user_rating = float(app[5])\n",
+    "            total+=user_rating\n",
+    "            len_genre+=1\n",
+    "    avg_genre_rating = total/len_genre\n",
+    "    print(genre,' : ',avg_genre_rating)\n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "On average, navigation apps have the highest number of user reviews, but this figure is heavily influenced by Waze and Google Maps, which have close to half a million user reviews together:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Waze - GPS Navigation, Maps & Real-time Traffic : 345046\n",
+      "Google Maps - Navigation & Transit : 154911\n",
+      "Geocaching® : 12811\n",
+      "CoPilot GPS – Car Navigation & Offline Maps : 3582\n",
+      "ImmobilienScout24: Real Estate Search in Germany : 187\n",
+      "Railway Route Search : 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "for app in free_ios:\n",
+    "    if app[-5] == 'Navigation':\n",
+    "        print(app[1], ':', app[5])\n",
+    "        \n",
+    "        "
+   ]
   }
  ],
  "metadata": {
