findinf popular genre of android data

--- a/Basics.ipynb
+++ b/Basics.ipynb
@@ -1241,7 +1241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false
    },
@@ -1265,6 +1265,139 @@
     "        print(app[1], ':', app[5])\n",
     "        \n",
     "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the previous screen, we came up with an app profile recommendation for the App Store based on the number of user ratings. We have data about the number of installs for the Google Play market, so we should be able to get a clearer picture about genre popularity. However, the install numbers don't seem precise enough — we can see that most values are open-ended (100+, 1,000+, 5,000+, etc.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1,000,000+ : 15.726534296028879\n",
+      "100,000+ : 11.552346570397113\n",
+      "10,000,000+ : 10.548285198555957\n",
+      "10,000+ : 10.198555956678701\n",
+      "1,000+ : 8.393501805054152\n",
+      "100+ : 6.915613718411552\n",
+      "5,000,000+ : 6.825361010830325\n",
+      "500,000+ : 5.561823104693141\n",
+      "50,000+ : 4.7721119133574\n",
+      "5,000+ : 4.512635379061372\n",
+      "10+ : 3.5424187725631766\n",
+      "500+ : 3.2490974729241873\n",
+      "50,000,000+ : 2.3014440433213\n",
+      "100,000,000+ : 2.1322202166064983\n",
+      "50+ : 1.917870036101083\n",
+      "5+ : 0.78971119133574\n",
+      "1+ : 0.5076714801444043\n",
+      "500,000,000+ : 0.2707581227436823\n",
+      "1,000,000,000+ : 0.22563176895306858\n",
+      "0+ : 0.04512635379061372\n",
+      "0 : 0.01128158844765343\n"
+     ]
+    }
+   ],
+   "source": [
+    "display_table(free_android,5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "One problem with this data is that is not precise. For instance, we don't know whether an app with 100,000+ installs has 100,000 installs, 200,000, or 350,000. However, we don't need very precise data for our purposes — we only want to get an idea which app genres attract the most users, and we don't need perfect precision with respect to the number of users.\n",
+    "\n",
+    "We're going to leave the numbers as they are, which means that we'll consider that an app with 100,000+ installs has 100,000 installs, and an app with 1,000,000+ installs has 1,000,000 installs, and so on.\n",
+    "\n",
+    "To perform computations, however, we'll need to convert each install number to float — this means that \n",
+    "we need to remove the commas and the plus characters, otherwise the conversion will fail and raise an error. We'll do this directly in the loop below, where we also compute the average number of installs for each genre (category).\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GAME  :  15588015.603248259\n",
+      "WEATHER  :  5074486.197183099\n",
+      "TRAVEL_AND_LOCAL  :  13984077.710144928\n",
+      "EVENTS  :  253542.22222222222\n",
+      "COMMUNICATION  :  38456119.167247385\n",
+      "LIBRARIES_AND_DEMO  :  638503.734939759\n",
+      "PARENTING  :  542603.6206896552\n",
+      "HEALTH_AND_FITNESS  :  4188821.9853479853\n",
+      "PRODUCTIVITY  :  16787331.344927534\n",
+      "LIFESTYLE  :  1437816.2687861272\n",
+      "TOOLS  :  10801391.298666667\n",
+      "HOUSE_AND_HOME  :  1331540.5616438356\n",
+      "BOOKS_AND_REFERENCE  :  8767811.894736841\n",
+      "SPORTS  :  3638640.1428571427\n",
+      "MEDICAL  :  120550.61980830671\n",
+      "EDUCATION  :  1833495.145631068\n",
+      "FINANCE  :  1387692.475609756\n",
+      "FOOD_AND_DRINK  :  1924897.7363636363\n",
+      "PERSONALIZATION  :  5201482.6122448975\n",
+      "FAMILY  :  3695641.8198090694\n",
+      "SHOPPING  :  7036877.311557789\n",
+      "PHOTOGRAPHY  :  17840110.40229885\n",
+      "ART_AND_DESIGN  :  1986335.0877192982\n",
+      "MAPS_AND_NAVIGATION  :  4056941.7741935486\n",
+      "BUSINESS  :  1712290.1474201474\n",
+      "AUTO_AND_VEHICLES  :  647317.8170731707\n",
+      "ENTERTAINMENT  :  11640705.88235294\n",
+      "SOCIAL  :  23253652.127118643\n",
+      "DATING  :  854028.8303030303\n",
+      "COMICS  :  817657.2727272727\n",
+      "BEAUTY  :  513151.88679245283\n",
+      "VIDEO_PLAYERS  :  24727872.452830188\n",
+      "NEWS_AND_MAGAZINES  :  9549178.467741935\n"
+     ]
+    }
+   ],
+   "source": [
+    "unique_android_apps=freq_table(free_android,1)\n",
+    "\n",
+    "for category in unique_android_apps:\n",
+    "    total=0\n",
+    "    len_category=0\n",
+    "    for app in free_android:\n",
+    "        category_app=app[1]\n",
+    "        if category_app==category:\n",
+    "            installs = app[5]\n",
+    "            installs = installs.replace(',','')\n",
+    "            installs = installs.replace('+','')\n",
+    "            installs = float(installs)\n",
+    "            total+=installs\n",
+    "            len_category+=1\n",
+    "    avg_category_rating = total/len_category\n",
+    "    print(category,' : ',avg_category_rating)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "On average, communication apps have the most installs: 38,456,119. This number is heavily skewed up by a few apps that have over one billion installs (WhatsApp, Facebook Messenger, Skype, Google Chrome, Gmail, and Hangouts), and a few others with over 100 and 500 million installs:\n"
    ]
   }
  ],
